; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_env_set.c_env_set_add_nolock.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_env_set.c_env_set_add_nolock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_set = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.env_set*, i8*)* @env_set_add_nolock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @env_set_add_nolock(%struct.env_set* %0, i8* %1) #0 {
  %3 = alloca %struct.env_set*, align 8
  %4 = alloca i8*, align 8
  store %struct.env_set* %0, %struct.env_set** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.env_set*, %struct.env_set** %3, align 8
  %7 = getelementptr inbounds %struct.env_set, %struct.env_set* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp eq i32* %8, null
  %10 = zext i1 %9 to i32
  %11 = load %struct.env_set*, %struct.env_set** %3, align 8
  %12 = getelementptr inbounds %struct.env_set, %struct.env_set* %11, i32 0, i32 1
  %13 = call i32 @remove_env_item(i8* %5, i32 %10, i32* %12)
  %14 = load i8*, i8** %4, align 8
  %15 = load %struct.env_set*, %struct.env_set** %3, align 8
  %16 = getelementptr inbounds %struct.env_set, %struct.env_set* %15, i32 0, i32 1
  %17 = load %struct.env_set*, %struct.env_set** %3, align 8
  %18 = getelementptr inbounds %struct.env_set, %struct.env_set* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @add_env_item(i8* %14, i32 1, i32* %16, i32* %19)
  ret void
}

declare dso_local i32 @remove_env_item(i8*, i32, i32*) #1

declare dso_local i32 @add_env_item(i8*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
